# NLP-Exercise-3

./: .gitignore  NLP_HW3_NTHU_113065892.docx  NLP_HW3_NTHU_113065892.py  bert_version.ipynb  bert_version_improved.ipynb  bert_version_improved_2.ipynb  bert_version_improved_3.ipynb  bert_version_improved_4.ipynb  bert_version_improved_4_more_epochs.ipynb  bert_version_improved_more_epochs.ipynb  bert_version_more_epochs.ipynb  bert_version_single_outputs.ipynb  gpt2_version.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  roberta_version.ipynb  roberta_version_2.ipynb
results/bert_multioutput_model_more_epochs_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_2_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_3_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_4_50_epochs_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_4_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_50_epochs_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
results/bert_multioutput_weighted_model_results/: batches_loss.csv  epoch_val_acc_corr.csv  full_results_test_set.csv
(+9 files in other folders)
