[project]
name = "nlp-exercise-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==2.21.0",
    "evaluate",
    "ipykernel",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch==2.5.1+cu121",
    "tqdm",
    "transformers",
]


[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
